rebuild quads when removing shadows for empty prop

BUG: 320786
FIXED-IN: 4.11
REVIEW: 110871