shadow.cpp
@@ -206,8 +206,11 @@ bool Shadow::updateShadow()
 {
     QVector<long> data = Shadow::readX11ShadowProperty(m_topLevel->window());
     if (data.isEmpty()) {
-        if (m_topLevel && m_topLevel->effectWindow() && m_topLevel->effectWindow()->sceneWindow())
+        if (m_topLevel && m_topLevel->effectWindow() && m_topLevel->effectWindow()->sceneWindow() &&
+                                            m_topLevel->effectWindow()->sceneWindow()->shadow()) {
             m_topLevel->effectWindow()->sceneWindow()->updateShadow(0);
+            m_topLevel->effectWindow()->buildQuads(true);
+        }
         deleteLater();
         return false;
     }
